# web

./: docker-compose.yml  main.py  requirements.txt
src/: Dockerfile  app.py  documentation.html  index.html  info.html  jwt_handler.py  legacy.html  main.py  pyproject.toml  pytest.ini  requirements.txt  run-allure.ps1  run.sh  swagger.json
src/Exercise/: dto.py  exercise_test.py  handler.py  model.py  repository.py  service.py
src/Gym/: dto.py  gym_test.py  handler.py  model.py  repository.py  service.py
src/Muscles/: dto.py  handler.py  model.py  muscle_test.py  repository.py  service.py
src/Position/: dto.py  handler.py  model.py  repository.py  service.py
src/Train/: dto.py  handler.py  model.py  repository.py  service.py  train_test.py
src/Trainer/: conftest.py  dto.py  handler.py  model.py  repository.py  service.py  trainer_test.py
src/User/: dto.py  handler.py  model.py  repository.py  service.py  user_test.py
src/allure-report/: index.html
src/allure-report/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
src/allure-report/export/: influxDbData.txt  prometheusData.txt
src/allure-report/history/: history.json  retry-trend.json
src/allure-report/widgets/: severity.json  status-chart.json  suites.json  summary.json
src/allure-results/: 004e4dbd-d926-4960-826d-d9dfe0acf9a5-container.json  00799beb-f584-482f-b9fd-b06f4aeff580-result.json  0109f44d-c65e-496e-a63c-65ad6fb1ca7d-container.json  020468c7-26da-43e0-a8b6-85190765c345-result.json  03436572-39d8-45e7-b286-a6681d676e4e-result.json  03c55cfc-26d9-4a90-bc9e-9139e169a815-result.json  03e6dd81-fd41-4e7f-84ca-fd4246cd77e5-result.json  04648069-43ba-45d9-87c2-a3114f604fde-result.json  0564f5fe-53a2-4f2f-a5d7-f109688d5c7b-result.json  0583d3a6-97f6-44f8-870e-98b2870ae651-result.json  05cbd809-93f6-4176-9831-b94555ff000b-result.json  05e83eb4-10db-4b70-89e8-f0e9d486c3ee-result.json  05eaa50e-78bc-4287-8995-2767bcf17d27-result.json  069450da-2fc3-41a3-b87d-0b4756b602e8-result.json  06ace7fb-233b-4c5d-8e77-d806162c00c1-result.json  06b6a551-58e5-42ae-bc76-089183de41cf-result.json  06d310a1-bbdf-4c53-9c22-011dd42ba417-result.json  072ef57a-6bfa-4e4f-a090-ff103c0c7d1e-result.json  07750265-71cc-4172-ac36-e5f953745332-result.json  082918e8-37a2-4721-9e6f-005a75f92207-result.json  08d81f31-56c6-4489-a4dc-b48c284419c3-result.json  08f20cd6-0c04-4360-b51b-d3b040d681e7-result.json  094266c1-6eae-4d72-b733-32a5d534a12d-result.json  0a5cd969-4f46-4686-bb5b-e104154ea9fa-container.json  0b51285d-f227-4970-81a0-c944b495046e-container.json  0b6608cd-fe25-4e72-8931-79da1510b058-container.json  0b6a5bcf-7098-4ab5-9856-56f89d42ecdb-result.json  0bb4c648-252d-4ac4-aa3f-774ce717337c-result.json  0ca5b2f8-ef40-4fe5-9857-2ce2c6454468-result.json  0cb198de-26fe-42a9-bf27-9ac7ec137622-container.json  0cefff02-52ea-43b4-b7bc-18b893c88944-result.json  0d36be04-9d0e-44e7-9b5d-6621df35e711-result.json  0d60cf57-7e3b-4b4c-bbbb-db0dedae751e-result.json  0db93c6b-704f-47d9-b8ae-b0c4af8d634f-result.json  0e23ac2e-4688-4196-9d7b-96874d66d07b-result.json  0e95db89-1db8-41a7-86ae-1cfb34e0d140-result.json  0f0946ca-a59a-4344-944d-1589b90efc0e-result.json  0f76740c-11c1-4123-af8d-caf3bb39c5ab-result.json  0fae4849-e09d-4b83-a6fe-fea4c91ec738-container.json  0fce2881-af16-4721-977c-6827f7a69688-result.json  (+647 more)
src/config/: config.txt
src/conn/: tu_model.py  tu_repository.py
src/errors/: 404.html
src/gittest/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  report.html  requirements.txt  run.py  runNew.py  runNew1.py  runNew2.py  runNew4.py  swagger.yaml
src/gittest/allure-results/: 0600b98a-680b-45f6-b608-2e5c1c843358-container.json  0eda05ee-7769-4db8-8b1e-3e1f9c605f86-container.json  21752329-948b-484f-a35d-cd7fe9c37296-result.json  2326f19c-bfdc-47d8-a8ab-916ef7bae45d-result.json  32f66bb6-58d3-420a-804a-53c01b1f125f-result.json  37fe332a-ab25-42a6-b3a6-0e0c907911d6-result.json  474c3a09-21f6-4921-8c56-8140a5c7683c-container.json  4c8cec24-edd3-4521-8e4d-2b4721ada853-result.json  517c04b4-3def-4ac9-9fe5-1f8526bc6755-result.json  553d573d-13e0-43ba-bf7e-079b9547a95b-container.json  56391be9-9be9-43e7-bad4-2e1afa8d2c6a-result.json  70718350-6aba-4485-a504-3e2ba2281614-result.json  773f4632-e246-4cd0-a2cd-2a556bd982f0-container.json  8069b07c-ad4b-4083-a40b-c8c256434937-result.json  818f2a63-b38d-4f5e-a541-f01d70265698-result.json  854cc60a-292b-4215-8c4a-75e59b0d0ec4-container.json  878510c8-0ec8-47b9-b9fb-fe304324c318-container.json  a8deb992-7a5a-462f-8ec4-af3a47eff857-result.json  b4a105c6-2dbe-4edf-9e08-79dd9869bb1e-result.json  be4d9ef9-b772-4bc3-833d-0929fc5f4c30-result.json  c40b13f4-0785-4047-a3da-5df6b687e55c-container.json  d848918a-f381-47fe-8557-b9a38b2d1fb5-result.json  eae68142-69f0-4644-9690-860100d49585-container.json  ebc34b6d-6031-4a64-8023-c0af72122ac3-result.json  fee300ca-44c0-4330-a790-cf45743801c9-container.json
src/gittest/marketplace/: main.py  sv.json
src/gittest/sql/: creation.sql  drop_tables.sql  impose_restrictions.sql  procedure.sql  set_values.sql  test.py
src/gittest/static/: styles.css
src/gittest/templates/: admin_page_accounts.html  admin_page_carts.html  admin_page_main.html  admin_page_orders.html  admin_page_own.html  admin_page_payments.html  admin_page_products.html  admin_page_rules.html  create_user.html  error.html  get_cart_by_id.html  get_order_by_id.html  get_payment_by_user_id.html  get_product_by_id.html  get_product_by_title.html  (+40 more)
src/sql/: bd.py  init.sql
src/templates/: add_train.html  add_train_error.html  add_user.html  admin_page.html  all_trains.html  all_trains_choose.html  change_train.html  change_train_error.html  choose_error.html  delete_train.html  exercise_list.html  exercise_page.html  gym_list.html  login.html  login_error.html  main.html  register.html  register_error.html  trainer_info.html  trainer_page.html  trainers_list.html  trainers_list_admin.html  trains_list.html  user_page.html
src/tests/: cart_tests.py  e2e.py  objectsMother.py  order_tests.py  product_cart_tests.py  product_order_tests.py  product_tests.py
(+2143 files in other folders)
